# sales-engineering-code

./: .gitignore  LICENSE  MANIFEST.in  Procfile  README.md  README_old.md  bi_tool_export.py  hello.py  project_copier.py  pyproject.toml  requirements.txt  run_bi_tool_export.sh  setup.py  setup.sh  topic_copier.py  topic_labeler.py
api_utils_app/: .gitignore  auto_plutchik.py  boilerplate_utilities.py  compass_utilities.py  conjunction_disjunction.py  deduper_utilities.py  doc_utilities.py  filter_subsets.py  luminoso_client_holder.py  qualtrics_utilities.py  rd_utilities.py  reddit_utilities.py  subset_filter.py  subset_utilities.py  tableau_export_web.py  term_utilities.py  text_filter.py  topic_utilities.py  web_app.py
se_code/: API-TRAINING_BoA_Code_Examples.ipynb  API-TRAINING_BoA_Code_Examples.py  AppFollow_Upload_Projects.ipynb  AppFollow_Upload_Projects.py  Auto_TopicExpansion_&_Topics-Docs_Correlations.ipynb  Auto_TopicExpansion_&_Topics-Docs_Correlations.py  Hybrid Training.ipynb  Run Tableau Export.ipynb  ScoreDriversOverTimeV4-simplified.ipynb  ScoreDriversOverTimeV4-simplified.py  Staples R Demo.R  Untitled.ipynb  add_concept_relations_to_project.py  add_outlier_concept_lists.py  add_outlier_concepts_to_list.py  add_plutchik_emotions.py  add_sentiment_as_driver.py  auto_plutchik.py  bi_tool_export.py  boilerplate_remover.py  capitalize_saved_concepts.py  cleaning_utils.py  color_sentiment.py  compalytics_demo.py  conjunctions_disjunctions.py  copy_project_with_filter.py  copy_shared_concepts.py  copy_shared_views.py  copy_topics.py  corr_export.py  (+62 more)
(+59 files in other folders)
